[Fix] Inline <code> tag word-break inside a <p> tag (#483)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -923,6 +923,10 @@ Usage (In Ghost editor):
     border-radius: 3px;
 }
 
+.post-full-content p code {
+    word-break: break-all;
+}
+
 .post-full-content pre {
     overflow-x: auto;
     margin: 1.5em 0 3em;
